--- a/src/app/fights-summary-raid/fight-summary-raid.component.scss
+++ b/src/app/fights-summary-raid/fight-summary-raid.component.scss
@@ -4,6 +4,11 @@ img {
   width: 20px;
   height: 20px;
   border-radius: 10px;
+  margin-right: 4px;
+}
+
+.player-name {
+  margin-right: 4px;
 }
 
 .aside-menu-scrollable {
